--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <div class="nav-links">
       <a href="#" class="active">Home</a>
-      <a href="about.html">About</a>
+      <a href="About.html">About</a>
       <a href="projects.html">Projects</a>
     </div>
     <a href="#contact-footer" class="contact-nav-btn">Contact</a>
@@ -118,7 +118,7 @@
           <div class="footer-nav">
             <h3>Quick Links</h3>
             <div class="footer-nav-links">
-              <a href="about.html" class="footer-bubble">About</a>
+              <a href="About.html" class="footer-bubble">About</a>
               <a href="projects.html" class="footer-bubble">Projects</a>
             </div>
           </div>
@@ -135,3 +135,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
