--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <nav>
     <div class="nav-links">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="About.html">About</a>
       <a href="projects.html" class="active">Projects</a>
     </div>
     <a href="#contact-footer" class="contact-nav-btn">Contact</a>
@@ -210,7 +210,7 @@
             <h3>Quick Links</h3>
             <div class="footer-nav-links">
               <a href="index.html" class="footer-bubble">Home</a>
-              <a href="about.html" class="footer-bubble">About</a>
+              <a href="About.html" class="footer-bubble">About</a>
             </div>
           </div>
         </div>
@@ -227,3 +227,4 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
