--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="right-column">
       <div class="profile-wave-frame">
-        <img src="assets/images/your-photo.jpg" alt="Profile image" class="profile-photo" />
+        <img src="assets/images/your-photo.JPG" alt="Profile image" class="profile-photo" />
         <span class="profile-wave"></span>
         <span class="profile-wave"></span>
         <span class="profile-wave"></span>
@@ -135,4 +135,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
