--- a/About.html
+++ b/About.html
@@ -145,7 +145,7 @@
           <div class="footer-nav">
             <h3>Quick Links</h3>
             <div class="footer-nav-links">
-              <a href="About.html" class="footer-bubble">About</a>
+              <a href="index.html" class="footer-bubble">Home</a>
               <a href="projects.html" class="footer-bubble">Projects</a>
             </div>
           </div>
@@ -161,4 +161,5 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
