--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | Anup Sarkar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <!-- Navigation -->
   <nav>
     <div class="nav-links">
       <a href="#" class="active">Home</a>
@@ -18,6 +18,7 @@
     <a href="#contact-footer" class="contact-nav-btn">Contact</a>
   </nav>
 
+  <!-- Hero Section -->
   <div class="main-section">
     <div class="left-column">
       <div class="hero-title">Anup Sarkar</div>
@@ -37,7 +38,7 @@
         <span class="tool-tag">Power BI</span>
         <span class="tool-tag">Tableau</span>
         <span class="tool-tag">TensorFlow</span>
-        <span class="tool-tag">Scikit-Learn></Sicik-Learn></span>
+        <span class="tool-tag">Scikit-Learn</span>
       </div>
       <div class="buttons-row">
         <a href="projects.html" class="work-btn">
@@ -71,6 +72,7 @@
     </div>
   </div>
 
+  <!-- Footer Section -->
   <footer id="contact-footer" class="footer-section">
     <div class="footer-container">
       <div class="footer-content">
@@ -131,11 +133,10 @@
     </div>
   </footer>
 
-  <!-- Scroll to top button, placed BEFORE your script tag for correct initialization -->
+  <!-- Scroll to top button -->
   <button id="scrollTopBtn" title="Go to top" aria-label="Back to top">↑</button>
+
+  <!-- Scripts -->
   <script src="js/script.js"></script>
 </body>
 </html>
-
-
-
