--- a/projects.html
+++ b/projects.html
@@ -159,8 +159,7 @@
       <ul class="modal-section-list" id="results-list"></ul>
     </div>
   </div>
-
-  <!-- Footer Section -->
+ <!-- Footer Section -->
   <footer id="contact-footer" class="footer-section">
     <div class="footer-container">
       <div class="footer-content">
@@ -192,7 +191,7 @@
               </button>
             </div>
             <div class="contact-item">
-              <span class="footer-bubble">📍 Hyderabad, Telangana , India</span>
+              <span class="footer-bubble">📍 Hyderabad, Telangana, India</span>
             </div>
           </div>
         </div>
@@ -200,8 +199,8 @@
           <div class="footer-social">
             <h3>Connect</h3>
             <div class="social-links">
-              <a href="https://linkedin.com/in/yourprofile" class="footer-bubble" target="_blank" rel="noopener">💼 LinkedIn</a>
-              <a href="https://github.com/yourusername" class="footer-bubble" target="_blank" rel="noopener">🐙 GitHub</a>
+              <a href="https://www.linkedin.com/in/anup-sarkar-8106-as/" target="_blank" rel="noopener noreferrer" class="footer-bubble">💼 LinkedIn</a>
+              <a href="https://github.com/Anup-Sarkar-DD" target="_blank" rel="noopener noreferrer" class="footer-bubble">🐙 GitHub</a>
             </div>
           </div>
         </div>
@@ -220,11 +219,11 @@
       </div>
     </div>
   </footer>
-
   <script src="js/project.js"></script>
     <!-- Scroll to top button, placed BEFORE your script tag for correct initialization -->
   <button id="scrollTopBtn" title="Go to top" aria-label="Back to top">↑</button>
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
